@@ -1,3 +1,12 @@
+Sun Apr 21 01:54:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk/libdwarf/Makefile (MAN): Add missing dwarf.3 and
+	dwarf_add_AT_comp_dir.3 entries.
+	Sent patch upstream as:
+	https://sourceforge.net/apps/trac/elftoolchain/ticket/419
+	* current-trunk/libdwarf/GNUmakefile.am (notrans_dist_man3_MANS):
+	Likewise.
+
 Sun Apr 21 00:14:18 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	current-trunk:
